<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="5">

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity=""
        android:background="@color/red"
        android:text="@string/clearTxt"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/backspace"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/divide"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/sevenNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/eightNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/nineNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/multiplySymbol"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/fourNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/fiveNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/sixNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/minusSymbol"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/oneNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/twoNum"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/threeNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/plusSymbol"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/dotSymbol"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/black"
        android:text="@string/zeroNum"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/orange"
        android:text="@string/equalsSymbol"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:focusable="true" />

</GridLayout>